--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,61 +1,52 @@
-<!-- <div class="row justify-content-center">
-	<div class="col-md-4">
-		<h2>Login</h2>
-		<form name="form" novalidate>
-			<div class="form-group">
-				<label for="username">Username</label> <input type="text"
-					class="form-control" name="username" required />
-
+<div class="loginForm">
+	<div class="row justify-content-md-center">
+		<div class="col col-sm-7">
+			<div class="card">
+				<div class="card-body">
+					<div class="row justify-content-md-center">
+						<div class="col col-sm-10">
+							<label><h3>Sign In</h3></label>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col col-sm-10">
+							<form #myForm="ngForm" novalidate>
+								<div class="form-group row">
+									<label for="exampleInputEmail1" class="col-sm-3 col-form-label">User
+										Name</label>
+									<div class="col-sm-9">
+										<input type="test" class="form-control"
+											id="exampleInputEmail1" aria-describedby="emailHelp"
+											placeholder="Enter user name" name="userName" #name="ngModel" 
+											ngModel required minlength="5" maxlength="20">
+											<show-errors [control]="name"></show-errors>
+									</div>
+								</div>
+								<div class="form-group row">
+									<label for="exampleInputPassword1"
+										class="col-sm-3 col-form-label">Password</label>
+									<div class="col-sm-9">
+										<input type="password" class="form-control"
+											id="exampleInputPassword1" placeholder="Password" 
+											 name="password" #apassword="ngModel" ngModel required >
+											 <show-errors [control]="apassword"></show-errors>
+									</div>
+								</div>
+								<div class="row">
+								<div class="col-sm-12">Forgot
+										password?</div>
+								</div>
+								<div class="row justify-content-center">
+									<div class="col col-sm-5">
+										<button type="submit" class="btn btn-primary" (click)="validateUser()">Submit</button>
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+				<div class="card-footer text-muted">2 days ago</div>
 			</div>
-			<div class="form-group">
-				<label for="password">Password</label> <input type="password"
-					class="form-control" name="password" required />
-			</div>
-			<div class="form-group">
-				<button [disabled]="loading" class="btn btn-primary" (click)="validateUser()" >Login</button>
-				<a [routerLink]="['/test']" class="btn btn-link">Register</a>
-			</div>
-		</form>
+		</div>
 	</div>
 </div>
-<a class="btn btn-block btn-social btn-twitter">
-    <span class="fa fa-twitter"></span> Sign in with Twitter
-  </a> -->
-  
- <button class="btn btn-primary" (click)="validateUser()" >Login</button>
- 
-  <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav> -->
